--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500&display=swap');
+
+/*
+font-family: 'Lora', serif; NADPISY
+font-family: 'Nunito Sans', sans-serif; TEXT
+*/
 
 * {
   box-sizing: border-box;
