--- a/src/global.css
+++ b/src/global.css
@@ -14,5 +14,5 @@ font-family: 'Nunito Sans', sans-serif; TEXT extra light, light, regular, medium
 }
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Nunito Sans';
 }
