--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@ font-family: 'Nunito Sans', sans-serif; TEXT extra light, light, regular, medium
 
 :root {
   --background-primary: #F5EDDA;
+  --text: #3D3B3A;
 }
 
 * {
@@ -15,4 +16,9 @@ font-family: 'Nunito Sans', sans-serif; TEXT extra light, light, regular, medium
 
 html {
   font-family: 'Nunito Sans';
+}
+
+body {
+  font-size: 16px;
+  color: var(--text);
 }
