--- a/src/global.css
+++ b/src/global.css
@@ -16,3 +16,7 @@ font-family: 'Nunito Sans', sans-serif; TEXT extra light, light, regular, medium
 html {
   font-family: 'Nunito Sans';
 }
+
+body {
+  margin: 0;
+}
