--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,22 +1,36 @@
 
 /* Obecné nastavení*/
 
-@media (min-width: 350px) {
+a {
+  color: black;
+  text-decoration: none;
+}
 
 header {
   background-color: var(--background-primary);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 7vh;
+  align-items: center;
 }
 
+/* Media*/
+
+@media (min-width: 350px) {
 .logo {
   background-image: url(img/logo.svg);
   background-size: contain ;
   background-repeat: no-repeat;
   width: 15vw;
   height: auto;
+}
 
+.menu {
+  flex-basis: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
 }
 
 .menu__btn {
@@ -29,11 +43,24 @@ header {
   margin: 0.75rem;
   border: none;
   cursor: pointer;
-  
-}
+  }
 
 .menu--close {
   display: none;
 }}
+
+@media (min-width: 1100px) {
+
+.menu {
+flex-basis: 70%;
+display: flex;
+padding-right: 3%;
+}
+
+.menu__btn {
+  display: none;
+}
+
+}
 
 
