úprava banner photo

--- a/src/pages/HomePage/components/Banner/style.css
+++ b/src/pages/HomePage/components/Banner/style.css
@@ -3,6 +3,7 @@
 }
 
 .banner {
+  max-width: 920px;
   margin-top: 0;
 }
 
@@ -29,7 +30,6 @@
 
   .banner {
     margin-top: 2rem;
-    max-width: 800px;
     display: flex;
     justify-content: center;
     gap: 4rem;
@@ -50,5 +50,17 @@
     width: 50vw;
     height: 50vh;
     border-radius: 50px 0 0 0;
+  }
+}
+
+@media (min-width: 1100px) {
+
+  .banner,
+  .banner__photo {
+    height: 100vh;
+  }
+
+  .banner {
+    gap: 6rem;
   }
 }
