--- a/src/global.css
+++ b/src/global.css
@@ -20,8 +20,14 @@ html {
 
 body {
   margin: 0 auto;
-  font-size: 16px;
+  font-size: 1rem;
   color: var(--text);
+}
+
+@media (min-width: 1100px) {
+ body {
+  font-size: 1.25rem;
+ }
 }
 
 section {
