--- a/src/pages/HomePage/components/Banner/style.css
+++ b/src/pages/HomePage/components/Banner/style.css
@@ -26,6 +26,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
+    gap: 2rem;
   }
 
   .banner {
@@ -38,8 +39,8 @@
 
   .banner__logo {
     margin: 0 auto;
-    width: 200px;
-    height: 200px;
+    width: 20vw;
+    height: 20vh;
     background-image: url(./img/banner-logo.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -54,13 +55,14 @@
 }
 
 @media (min-width: 1100px) {
-
-  .banner,
-  .banner__photo {
-    height: 100vh;
-  }
-
   .banner {
     gap: 6rem;
   }
+
+  .banner,
+  .banner__photo {
+    height: 80vh;
+  }
+
+
 }
