--- a/src/global.css
+++ b/src/global.css
@@ -25,11 +25,16 @@ body {
 }
 
 @media (min-width: 1100px) {
- body {
-  font-size: 1.25rem;
- }
+  body {
+    font-size: 1.25rem;
+  }
 }
 
 section {
   margin: 2rem auto;
+}
+
+.title {
+  font-family: 'Lora';
+
 }
