--- a/src/pages/HomePage/components/Banner/style.css
+++ b/src/pages/HomePage/components/Banner/style.css
@@ -16,7 +16,7 @@
   background-size: cover;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1100px) {
 
   .banner,
   .banner__title {
@@ -26,10 +26,11 @@
 
   .banner {
     margin-top: 2rem;
-    gap: 4rem;
+    gap: 6rem;
   }
 
   .banner__title {
+    width: 50vw;
     flex-direction: column;
     text-align: center;
     gap: 2rem;
@@ -49,11 +50,5 @@
     width: 50vw;
     height: 80vh;
     border-radius: 80px 0 0 0;
-  }
-}
-
-@media (min-width: 1100px) {
-  .banner {
-    gap: 6rem;
   }
 }
