header-cross-button

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -47,6 +47,10 @@ header {
   cursor: pointer;
   }
 
+  .menu__btn.close {
+    background-image: url('./img/close-icon.png');
+  }
+
 .menu--close {
   display: none;
 }}
