--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -2,6 +2,7 @@
 h2 {
   text-align: center;
   padding-top: 5%;
+  margin-bottom: 3%;
 }
   
 h3 {
@@ -61,32 +62,12 @@ img {
 }
 
 @media (min-width: 350px) {
-  .destination {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-
   img {
-    width: 350px;
-    margin: 0 auto;
-  } 
+    max-width: 350px;
+ 
+  }
 }
 
-@media (min-width: 850ps) {
-
+@media (min-width: 850px) {
+ 
 }
-
-@media (min-width: 1100px) {
-  .destination {
-    width: 430px;
-    justify-self: center;
-  }
-  
-  img {
-    width: 430px;
-    height: 85%;
-  }
-  
- }
-  
