--- a/src/pages/HomePage/components/Destinations/style.css
+++ b/src/pages/HomePage/components/Destinations/style.css
@@ -1,3 +1,5 @@
+/* Nastavení hlavního kontejneru*/
+
 .container-destination {
  display: flex;
  flex-direction: column;
@@ -8,15 +10,7 @@
 
 @media (min-width: 850px) {
   .container-destination {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100vw;
-  }
-}
-
-@media (min-width: 1100px) {
-  .container-destination {
-    grid-template-columns: 1fr 1fr 1fr;
-  
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 }
