--- a/src/pages/HomePage/components/Destinations/style.css
+++ b/src/pages/HomePage/components/Destinations/style.css
@@ -12,5 +12,13 @@
   .container-destination {
     flex-direction: row;
     flex-wrap: wrap;
+    width: 80vw;
+  }
+}
+
+@media (min-width: 1100px) {
+  .container-destination {
+    width: 100vw;
+    justify-content: center;
   }
 }
