--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -2,7 +2,7 @@
 h2 {
   text-align: center;
   padding-top: 5%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
 }
   
 h3 {
@@ -64,10 +64,11 @@ img {
 @media (min-width: 350px) {
   img {
     max-width: 350px;
- 
   }
 }
 
-@media (min-width: 850px) {
- 
+@media (min-width: 1100px) {
+  .destination {
+    margin: 2%;
+  }
 }
