--- a/src/global.css
+++ b/src/global.css
@@ -30,8 +30,13 @@ body {
   }
 }
 
+main {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 section {
-  margin: 2rem auto;
+  margin: 2rem 0;
 }
 
 .title {
