--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -2,7 +2,8 @@
 h2 {
   text-align: center;
   padding-top: 5%;
-  margin-bottom: 2%;
+  margin-bottom: 1%;
+  font-family: 'Lora', sans-serif;
 }
   
 h3 {
@@ -61,14 +62,31 @@ img {
   border-radius: 0 0 20px 20px;
 }
 
+.destination-button {
+  text-align: center;
+}
+
 @media (min-width: 350px) {
   img {
-    max-width: 350px;
+    max-width: 400px;
+   
+  }
+}
+
+@media (min-width: 850px) {
+  img {
+    width: 400px;
+    max-height: 470px;
+  }
+  
+  .destination {
+    margin: 1%;
   }
 }
 
 @media (min-width: 1100px) {
-  .destination {
-    margin: 2%;
+  img {
+    width: 400px;
+    max-height: 500px;
   }
 }
