--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -49,7 +49,7 @@ h3 {
   padding-top: 3%;
 }
 
-.destination-pic {
+.destina {
   border-radius: 20px 20px 0 0;
   margin: 0;
 }
@@ -92,11 +92,7 @@ h3 {
 
 @media (min-width: 1100px) {
   .destination-pic {
-    min-width: 350px;
+    max-width: 350px;
     max-height: 500px;
-  }
-
-  .destination {
-    margin: 1%;
   }
 }
