--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -49,7 +49,7 @@ h3 {
   padding-top: 3%;
 }
 
-.destina {
+.destination-pic {
   border-radius: 20px 20px 0 0;
   margin: 0;
 }
@@ -79,8 +79,8 @@ h3 {
 
 @media (min-width: 850px) {
   .destinaton-pic {
-    width: 400px;
-    max-height: 470px;
+    max-width: 300px;
+    max-height: 400px;
   }
   
   .destination {
@@ -92,7 +92,7 @@ h3 {
 
 @media (min-width: 1100px) {
   .destination-pic {
-    max-width: 350px;
-    max-height: 500px;
+    max-width: 320px;
+    max-height: 400px;
   }
 }
