--- a/src/pages/HomePage/components/Package/style.css
+++ b/src/pages/HomePage/components/Package/style.css
@@ -1,1 +1,6 @@
-
+.package {
+  max-width: 325px;
+  padding: 1rem 0.5rem;
+  border-radius: 20px;
+  background-color: var(--background-primary);
+}
