--- a/src/pages/HomePage/components/Package/style.css
+++ b/src/pages/HomePage/components/Package/style.css
@@ -1,6 +1,70 @@
 .package {
+  position: relative;
   max-width: 325px;
-  padding: 1rem 0.5rem;
+  height: 400px;
+
+  background-color: var(--background-secundary);
+
   border-radius: 20px;
+  margin: 1rem auto;
+}
+
+.package__name {
+  margin: 0;
+  padding: 2rem 0;
+  border-radius: 20px 20px 0 0;
+
   background-color: var(--background-primary);
+}
+
+.package__list {
+  margin-left: 15%
+}
+
+
+.package__price {
+  position: absolute;
+  left: 15%;
+  top: 80%;
+
+  text-align: center;
+  font-weight: 600;
+
+  background-color: var(--button);
+
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  .package {
+    flex: 0 1 30%;
+  }
+
+  .package__list {
+    margin-left: 0;
+  }
+
+  .package__price {
+    left: 0;
+  }
+}
+
+
+
+@media (min-width: 878px) {
+  .package__price {
+    left: 10%;
+  }
+}
+
+
+@media (min-width: 1100px) {
+  .package {
+    height: 450px;
+  }
+
+  .package__price {
+    left: 6%;
+  }
 }
