--- a/src/pages/HomePage/components/Package/style.css
+++ b/src/pages/HomePage/components/Package/style.css
@@ -1,3 +1,15 @@
+.text--mobile {
+  max-width: 325px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width:768px) {
+  .text--mobile {
+    max-width: 100%;
+  }
+}
+
 .package {
   position: relative;
   max-width: 325px;
@@ -50,14 +62,23 @@
   }
 }
 
-
+@media (min-width: 778px) {
+  .package__price {
+    left: 3%;
+  }
+}
 
 @media (min-width: 878px) {
+  .package__price {
+    left: 5%;
+  }
+}
+
+@media (min-width: 978px) {
   .package__price {
     left: 10%;
   }
 }
-
 
 @media (min-width: 1100px) {
   .package {
@@ -65,6 +86,7 @@
   }
 
   .package__price {
-    left: 6%;
+    left: 8%;
   }
+
 }
