--- a/src/pages/HomePage/components/PhotoGallery/ImageGallery/style.css
+++ b/src/pages/HomePage/components/PhotoGallery/ImageGallery/style.css
@@ -1,21 +1,13 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 .photo-container {
-  width: 100%;
   height: 100%;
   position: relative;
 }
 
 .photo {
-    width: 100%;
-    height: 100%;
     display: flex;
     overflow: hidden;
 }
+
 .img-gallery {
   object-fit: cover;
   width: 100%;
@@ -33,7 +25,6 @@
   bottom: 0;
   padding: 1rem;
   cursor: pointer;
-  transition: background-color 100ms ease-in-out;
 }
 
 .img-btn > * {
@@ -42,80 +33,29 @@
   height: 2rem;
 }
 
-.img-photogalery {
-  position: "absolute";
-  bottom: ".5rem";
-  left: "50%";
-  translate: "-50%";
-  display: "flex";
-  gap: ".25rem";
-}
-
-@keyframes squish {
-  50% {
-    scale: 1.4 0.6;
-  }
-}
-
-.img-dot-btn {
-  all: unset;
-  display: block;
-  cursor: pointer;
-  width: 1rem;
-  height: 1rem;
-  transition: scale 100ms ease-in-out;
-}
-
-.img-dot-btn:hover,
-.img-dot-btn:focus-visible {
-  scale: 1.2;
-}
-
-.img-dot-btn:focus-visible,
-.img-btn:focus-visible {
-  outline: auto;
-}
-
-.skip-link {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-}
-
-.skip-link:focus-visible {
-  top: 0;
-  left: 0;
-  border: 1px solid black;
-  background-color: white;
-  padding: 0.5rem;
-  width: auto;
-  height: auto;
-  margin: 0;
-  clip: unset;
-  text-decoration: none;
-  color: black;
-  z-index: 100;
-}
-
-@media not (prefers-reduced-motion) {
-  .img-gallery {
-    transition: translate 300ms ease-in-out;
-  }
-
-  .img-btn:hover > *,
-  .img-btn:focus-visible > * {
-    animation: squish 200ms ease-in-out;
-  }
-}
-
 @media (min-width: 750px) {
   .photo-container {
     width: 80%;
     margin: 0 auto;
+  }
+}
+
+@media (min-width: 1100px) {
+  .photo-container {
+    width: 100%;
+  }
+
+  .img-btn {
+    display: none;
+  }
+
+  .photo {
+    overflow: visible;
+    flex-wrap: wrap;
+  }
+
+  img {
+    max-width: 250px;
+    flex-basis: calc(100 / 4);
   }
 }
