--- a/src/pages/HomePage/components/PhotoGallery/style.css
+++ b/src/pages/HomePage/components/PhotoGallery/style.css
@@ -1,6 +1,17 @@
+h2 {
+  margin: 5%;
+}
+
 .photo-gallery-all {
   max-width: 850px;
   height: auto;
   width: 100%;
   margin: 0 auto;
+}
+
+@media (min-width: 1100px) {
+  .photo-gallery-all {
+   margin: 4%;
+   max-width: 1000px;
+  }
 }
