--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -15,6 +15,10 @@
     display: block;
     padding-right: 5%;
   }
+
+  .navbar__list {
+    padding-left: 0;
+  }
 }
 
 @media (min-width: 1100px) {
