--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -59,7 +59,7 @@ h3 {
   margin: 0 auto;
   margin-bottom: 5%;
   background-color: #F5EDDA;
-  border-radius: 0 0 20px 20px;
+  border-radius: 20px 20px 20px 20px;
 }
 
 .destination-button {
@@ -68,11 +68,11 @@ h3 {
 
 @media (min-width: 350px) {
   .destination-pic {
-    width: 400px;
+    width: 350px;
     max-height: 490px;
   }
   .destinaton {
-   max-height: 500px;
+   max-height: 450px;
    margin: 0 auto;
   }
 }
