--- a/src/pages/HomePage/components/AboutUs/style.css
+++ b/src/pages/HomePage/components/AboutUs/style.css
@@ -1,4 +1,82 @@
+.about-us {
+  position: relative;
+}
+
 .container {
   display: flex;
   flex-direction: column;
+}
+
+.about-us__text {
+  margin: 0 2rem;
+}
+
+.about-us__label {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .hidden {
+    display: block;
+  }
+
+  .container {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    margin: 1rem 0;
+  }
+
+  .container__item {
+    flex-basis: 50%;
+  }
+
+  .about-us__img {
+    background-image: url(./img/about-us.JPG);
+    background-position: center;
+    background-size: cover;
+    border-radius: 0 80px 0 0;
+
+    height: 70vh;
+  }
+
+  .about-us__text {
+    margin: 0 1rem 0 0;
+  }
+
+  .about-us__text p {
+    margin: 3rem 0;
+  }
+
+  .about-us__label {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+
+    width: 200px;
+    background-color: var(--background-primary);
+    text-align: center;
+
+    padding: 0.5rem;
+
+    position: absolute;
+    bottom: -5%;
+    left: calc(100% / 3);
+  }
+
+  .about-us__label p {
+    flex-basis: 50%;
+    font-family: 'Lora';
+  }
+
+  .about-us__large {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 1100px) {
+  .container {
+    gap: 3rem;
+  }
 }
