--- a/src/pages/HomePage/components/Destinations/Destination/style.css
+++ b/src/pages/HomePage/components/Destinations/Destination/style.css
@@ -1,11 +1,4 @@
-
-h2 {
-  text-align: center;
-  padding-top: 5%;
-  margin-bottom: 1%;
-  font-family: 'Lora', sans-serif;
-}
-  
+ 
 h3 {
   text-align: center;
   font-size: 20px;
@@ -42,7 +35,7 @@ h3 {
   opacity: 0.7;
 }
 
-.title {
+.title-destination {
   padding: 0;
   width: 100%;
   height: 10%;
