--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -11,15 +11,15 @@
   box-shadow: 0px 4px 6px 0px #3d3b3ac9;
 }
 
-/* @media (min-width: 1024px) { */
-.button:hover {
-  /* background-color: var(--background-primary); */
-  color: #ffffff;
-  scale: 1.1;
-  box-shadow: 0px 2px 4px 0px #3d3b3ac9;
-}
+@media (min-width: 1024px) {
+  .button:hover {
+    /* background-color: var(--background-primary); */
+    color: #ffffff;
+    scale: 1.1;
+    box-shadow: 0px 2px 4px 0px #3d3b3ac9;
+  }
 
-/* } */
+}
 
 .button:active {
   scale: 0.9;
