--- a/src/global.css
+++ b/src/global.css
@@ -58,3 +58,28 @@ section {
     max-width: 100%;
   }
 }
+
+/*----- Fotka a text-----*/
+.container-flex {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width:768px) {
+  .container-flex {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+  }
+
+  .container-flex__item {
+    flex-basis: 50%;
+  }
+}
+
+@media (min-width: 1100px) {
+  .container-flex {
+    gap: 3rem;
+  }
+}
