--- a/src/pages/ReferencePage/components/Reference/style.css
+++ b/src/pages/ReferencePage/components/Reference/style.css
@@ -2,13 +2,13 @@
   max-width: 450px;
 }
 
-.reference__img {
+.reference__img,
+.reference__img img {
   height: 50vh;
 }
 
 .reference__img img {
   width: 100%;
-  height: 50vh;
 }
 
 .left-corner {
@@ -23,6 +23,23 @@
   padding: 0 1rem;
 }
 
-.reference__title {
-  text-align: center;
+@media (min-width: 768px) {
+  .reference {
+    max-width: 100%;
+  }
+
+  .reference__img,
+  .reference__img img {
+    height: 70vh;
+  }
+
+  .order--second {
+    order: 2;
+  }
+}
+
+@media (min-width: 1100px) {
+  .reference__img img {
+    max-width: 100%;
+  }
 }
