--- a/src/global.css
+++ b/src/global.css
@@ -33,6 +33,7 @@ body {
   }
 }
 
+/*---- šířka hlavního obsahu na stránce -----*/
 main {
   max-width: 1100px;
   margin: 0 auto;
@@ -42,12 +43,12 @@ section {
   margin: 4rem 0;
 }
 
+/*----úvodní text pod titlem---*/
 .text--mobile {
   max-width: 325px;
   margin-left: auto;
   margin-right: auto;
 }
-
 
 .text--center {
   text-align: center;
