--- a/src/pages/ReferencePage/components/Reference/style.css
+++ b/src/pages/ReferencePage/components/Reference/style.css
@@ -23,6 +23,10 @@
   padding: 0 1rem;
 }
 
+.reference__gallery--hidden {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .reference {
     max-width: 100%;
