--- a/src/pages/HomePage/components/Destinations/style.css
+++ b/src/pages/HomePage/components/Destinations/style.css
@@ -1,6 +1,6 @@
 /* Nastavení hlavního kontejneru*/
 
-.container-destination {
+.destination__hp {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -9,7 +9,7 @@
 }
 
 @media (min-width: 850px) {
-  .container-destination {
+  .destination__hp {
     flex-direction: row;
     flex-wrap: wrap;
     width: auto;
@@ -18,7 +18,7 @@
 }
 
 @media (min-width: 1100px) {
-  .container-destination {
+  .destination__hp {
     width: 1100px;
     margin: 0 auto;
     margin-left: 0;
