--- a/src/pages/PackagePage/Package/style.css
+++ b/src/pages/PackagePage/Package/style.css
@@ -41,7 +41,7 @@
 }
 
 .pic-container,
-.package-title {
+.package-section {
   margin-left: 0;
   text-align: center;
 }
@@ -57,7 +57,7 @@
   flex-direction: row;
  }
 
- .package-title {
+ .package-section {
   flex-basis: 50%;
  }
 
