--- a/src/pages/CalculatePage/style.css
+++ b/src/pages/CalculatePage/style.css
@@ -2,8 +2,39 @@
   padding: 1rem;
 }
 
+label,
+input,
+button,
+select,
+textarea {
+  font-size: inherit;
+  font-family: inherit;
+}
+
+input,
+button,
+select,
+textarea {
+  padding: 0.5rem;
+}
+
 input,
 select,
 label {
   display: block;
+}
+
+label {
+  cursor: pointer;
+}
+
+input:not([type="radio"]):not([type="checkbox"]),
+select,
+label,
+textarea {
+  width: 300px;
+}
+
+.calculate__field {
+  margin-bottom: 1.5rem;
 }
