services item done

--- a/src/pages/CalculatePage/style.css
+++ b/src/pages/CalculatePage/style.css
@@ -40,10 +40,16 @@ textarea {
 }
 
 .wedding-ceremony,
-.wedding-package {
+.wedding-package,
+.wedding-services {
   display: flex;
 }
 
 .ceremony-type {
   margin-left: 2%;
+}
+
+.wedding-services {
+  flex-wrap: wrap;
+  gap: 1rem;
 }
