--- a/src/pages/CalculatePage/style.css
+++ b/src/pages/CalculatePage/style.css
@@ -53,3 +53,39 @@ textarea {
   flex-wrap: wrap;
   gap: 1rem;
 }
+
+.wedding-place,
+.wedding-question {
+  display: flex;
+}
+
+.radio-input__type {
+  display: flex;
+  margin: 1%;
+}
+
+.radio-input {
+  margin-left: 5%;
+}
+
+/* Ukazatel total price*/
+
+.wedding-price_display {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  max-width: 200px;
+  background-color: #D9D9D9;
+  border-radius: 20px;
+  position: sticky;
+  top: 0;
+  margin-left: 60%;
+}
+
+.price-total {
+  min-width: 60px;
+  background-color: #DDCC9F;
+  border-radius: 20px;
+  padding: 3%;
+  text-align: end;
+}
