--- a/src/components/Title/style.css
+++ b/src/components/Title/style.css
@@ -14,7 +14,8 @@
 .title-line {
   display: flex;
   align-items: center;
-  margin: 5%;
+  margin-left: 2%;
+  margin-right: 2%;
   margin-top: 0;
 }
 
