--- a/src/pages/CalculatePage/components/Form/components/Checkbox/style.css
+++ b/src/pages/CalculatePage/components/Form/components/Checkbox/style.css
@@ -1,34 +1,12 @@
-.checkbox {
+.wedding-contact {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+}
+
+.wedding-contact__inputs {
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  width: 320px;
-}
-
-.checkbox__description {
-  display: flex;
-  align-items: baseline;
-  gap: 0.5rem;
-}
-
-.checkbox__img,
-.checkbox__container {
-  width: 320px;
-  height: 210px;
-}
-
-.checkbox__container {
-  position: relative;
-}
-
-.checkbox__price {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-
-  text-align: right;
-  background-color: var(--background-primary);
-
-  padding: 0.5rem;
-  height: 2rem;
+  gap: 1rem;
+  width: 50vw;
 }
