--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -86,9 +86,12 @@
   max-width: 200px;
   background-color: #D9D9D9;
   border-radius: 20px;
+
   position: sticky;
-  top: 0;
-  margin-left: 60%;
+  top: 10%;
+  right: 0;
+  margin-left: 50%;
+  z-index: 2;
 }
 
 .price-total {
