--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -11,6 +11,14 @@
   box-shadow: 0px 4px 6px 0px #3d3b3ac9;
 }
 
+.button:active {
+  scale: 0.9;
+}
+
+.button--no-border {
+  border: none;
+}
+
 @media (min-width: 1024px) {
   .button:hover {
     /* background-color: var(--background-primary); */
@@ -19,8 +27,4 @@
     box-shadow: 0px 2px 4px 0px #3d3b3ac9;
   }
 
-}
-
-.button:active {
-  scale: 0.9;
 }
