oprava popisku about us+transition

--- a/src/pages/HomePage/components/AboutUs/style.css
+++ b/src/pages/HomePage/components/AboutUs/style.css
@@ -43,7 +43,8 @@
     padding: 0.5rem;
 
     position: absolute;
-    bottom: -5%;
+    right: -5%;
+    bottom: -6%;
     left: calc(100% / 3);
   }
 
