form-container-hidden

--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -33,7 +33,9 @@
 
 .message-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  width: 50vw;
   margin-top: 20px;
 }
 
