--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -37,11 +37,12 @@
   justify-content: center;
   width: 50vw;
   margin-top: 20px;
+  border-radius: 20px;
 }
 
 .message {
+  padding: 5%;
   background-color: #F0F0F0;
-  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
