--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -28,7 +28,7 @@
 .wedding-calculate__services {
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;
+  gap: 2.6rem;
 }
 
 .message-container {
@@ -92,8 +92,7 @@
 
   position: sticky;
   top: 10%;
-  right: 0;
-  margin-left: 50%;
+  bottom: 0;
   z-index: 2;
 }
 
