--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -70,11 +70,13 @@
   justify-content: end;
   align-items: center;
   max-width: 200px;
+  height: 50px;
   background-color: #D9D9D9;
   border-radius: 20px;
 
-  position: sticky;
-  top: 10%;
+  position:sticky;
+  left: 100%;
+  top: 90%;
   bottom: 0;
   z-index: 2;
 }
