--- a/src/pages/HomePage/components/Packages/Package/style.css
+++ b/src/pages/HomePage/components/Packages/Package/style.css
@@ -1,7 +1,7 @@
 .package {
   position: relative;
   max-width: 325px;
-  height: 400px;
+  height: 420px;
 
   background-color: var(--background-secundary);
 
@@ -51,6 +51,10 @@
 }
 
 @media (min-width: 778px) {
+  .package {
+    margin: 0;
+  }
+
   .package__price {
     left: 3%;
   }
