--- a/src/pages/CalculatePage/components/Form/components/CheckboxWithImg/style.css
+++ b/src/pages/CalculatePage/components/Form/components/CheckboxWithImg/style.css
@@ -1,28 +1,28 @@
-.checkbox {
+.checkbox-img {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   width: 320px;
 }
 
-.checkbox__description {
+.checkbox-img__description {
   display: flex;
   align-items: baseline;
   gap: 0.5rem;
 }
 
-.checkbox__img,
-.checkbox__container {
+.checkbox-img__img,
+.checkbox-img__container {
   width: 320px;
   height: 210px;
 }
 
-.checkbox__container {
+.checkbox-img__container {
   position: relative;
   z-index: 0;
 }
 
-.checkbox__price {
+.checkbox-img__price {
   position: absolute;
   bottom: 0;
   right: 0;
