--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -31,6 +31,24 @@
   gap: 2.6rem;
 }
 
+.wedding-contact {
+  display: flex;
+  justify-content: center;
+}
+
+.wedding-contact__inputs {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 50vw;
+}
+
+/*----Povinná pole----*/
+.required--input {
+  color: red;
+}
+
 @media (min-width: 450px) {
 
   .wedding-calculate__place,
@@ -74,7 +92,7 @@
   background-color: #D9D9D9;
   border-radius: 20px;
 
-  position:sticky;
+  position: sticky;
   left: 100%;
   top: 90%;
   bottom: 0;
