--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -78,13 +78,13 @@
 
 /* Ukazatel total price*/
 
-.wedding-price_display {
+.wedding-price__display {
   display: flex;
   justify-content: end;
   align-items: center;
   max-width: 200px;
   height: 50px;
-  background-color: #D9D9D9;
+  background-color: var(--background-primary);
   border-radius: 20px;
 
   position: sticky;
@@ -98,6 +98,6 @@
   min-width: 60px;
   background-color: #DDCC9F;
   border-radius: 20px;
-  padding: 3%;
+  padding: 4%;
   text-align: end;
 }
