--- a/src/pages/CalculatePage/components/Form/style.css
+++ b/src/pages/CalculatePage/components/Form/style.css
@@ -31,6 +31,15 @@
   gap: 3rem;
 }
 
+.wedding-calculate__info {
+  font-size: 1rem;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
+}
+
 .wedding-contact {
   display: flex;
   justify-content: center;
@@ -40,8 +49,8 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  width: 700px;
   gap: 1rem;
-  width: 50vw;
 }
 
 @media (min-width: 450px) {
@@ -74,38 +83,4 @@
     justify-content: flex-start;
     gap: 3rem;
   }
-}
-
-/* Ukazatel total price*/
-
-.wedding-price__display {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  max-width: 200px;
-  height: 50px;
-  background-color: var(--background-primary);
-  border-radius: 20px;
-
-  position: sticky;
-  left: 100%;
-  top: 90%;
-  bottom: 0;
-  z-index: 2;
-}
-
-.price-total {
-  min-width: 60px;
-  background-color: #DDCC9F;
-  border-radius: 20px;
-  padding: 4%;
-  text-align: end;
-}
-
-.text--additional {
-  font-size: 1rem;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  width: 50%;
-  position: relative;
 }
