--- a/src/components/Navbar/TabLInk/style.css
+++ b/src/components/Navbar/TabLInk/style.css
@@ -5,7 +5,9 @@
 
 .navbar__item.active {
   font-weight: bold;
-  color: #fffefc;
-  text-shadow: rgb(0, 0, 0) 3px 2px 10px;
+}
+
+.navbar__item:hover {
+  color: rgb(160, 127, 127);
 }
 
