--- a/src/pages/CalculatePage/components/Form/components/ErrorMessage/style.css
+++ b/src/pages/CalculatePage/components/Form/components/ErrorMessage/style.css
@@ -2,3 +2,14 @@
 .required--input {
   color: red;
 }
+
+.required--center {
+  text-align: center;
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .required--center {
+    text-align: left;
+  }
+}
