--- a/src/pages/CalculatePage/components/Form/components/FormSummary/style.css
+++ b/src/pages/CalculatePage/components/Form/components/FormSummary/style.css
@@ -1,10 +1,3 @@
-.message-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 50vw;
-  border-radius: 20px;
-}
 
 .message {
   padding: 5%;
@@ -16,3 +9,45 @@
 .message-title {
   margin-left: 0;
 }
+
+.button-formSummary-container {
+  display: flex;
+  justify-content: center;
+}
+
+.button-formSummary {
+  background-color: var(--button);
+  border-radius: 10px;
+  padding: 0.7rem;
+  width: 150px;
+  border: none;
+  box-shadow: 0px 4px 6px 0px #3d3b3ac9;
+}
+
+.button-formSummary:active {
+  scale: 0.9;
+}
+
+@media (min-width: 350px) {
+  .message-container {
+    margin: 0 auto;
+    width: 80vw;
+  }
+}
+
+@media (min-width: 1024px) {
+  .button-formSummary:hover {
+    /* background-color: var(--background-primary); */
+    color: #ffffff;
+    scale: 1.1;
+  }
+
+  .message-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50vw;
+    border-radius: 20px;
+  }
+}
+
