--- a/src/global.css
+++ b/src/global.css
@@ -118,7 +118,7 @@ select {
   width: 300px;
 }
 
-/*-----popisek fotky -----*/
+/*-----popisky fotky -----*/
 .photo__rights {
   font-size: 0.5rem;
   color: #ffffff;
