--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,9 +1,9 @@
+/*----Button---*/
 .button-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 
 .button {
   font-size: 16px;
