--- a/src/pages/ContactPage/components/Contact/style.css
+++ b/src/pages/ContactPage/components/Contact/style.css
@@ -2,8 +2,6 @@
   background-image: url(map.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 100px 0 0 0;
-  border: solid 0.5px rgb(103, 97, 97);
 }
 
 .contact-adress,
@@ -13,29 +11,28 @@
   display: flex;
   align-items: center;
   gap: 2rem;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 @media (min-width: 350px) {
   .contact-container {
     display: flex;
     flex-direction: column;
-    margin: 10%;
   }
 
   .contact-map {
     width: 70vw;
     height: 30vh;
-   margin: 0 auto;
-   margin-top: 5%;
+    margin: 0 auto;
+    margin-top: 5%;
   }
 
-.contact-adress,
-.contact-phone,
-.contact-mail,
-.contact-hours {
- justify-content: center;
-}
+  .contact-adress,
+  .contact-phone,
+  .contact-mail,
+  .contact-hours {
+    justify-content: center;
+  }
 }
 
 @media (min-width: 850px) {
@@ -43,9 +40,10 @@
     flex-direction: row;
     align-items: center;
   }
+
   .contact-map {
     width: 50vw;
-    height: 30vh;
+    height: 70vh;
     margin: 0;
   }
 
@@ -53,32 +51,30 @@
     flex-basis: 50%;
   }
 
-.contact-adress,
-.contact-phone,
-.contact-mail,
-.contact-hours {
- justify-content: start;
-}
+  .contact-adress,
+  .contact-phone,
+  .contact-mail,
+  .contact-hours {
+    justify-content: start;
+  }
 }
 
 @media (min-width: 1100px) {
   .contact-container {
     flex-direction: row;
-  } 
+  }
 
-.contact-map {
-  background-image: url(map.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  flex-basis: 50%;
-  border-radius: 100px 0 0 0;
-  border: solid 0.5px rgb(103, 97, 97);
-  height: 50vh;
-}
+  .contact-map {
+    background-image: url(map.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    flex-basis: 50%;
+    height: 50vh;
+  }
 
-.contact-container {
-  margin-top: 5%;
-  display: flex;
-  justify-content: space-between;
-}
+  .contact-container {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
