contact form done

--- a/src/global.css
+++ b/src/global.css
@@ -92,13 +92,15 @@ section {
 /*-----Obecné styly pro form----*/
 label,
 input,
-select {
+select,
+textarea {
   font-size: inherit;
   font-family: inherit;
 }
 
 input,
-select {
+select,
+textarea {
   padding: 0.5rem;
 }
 
@@ -107,7 +109,8 @@ label {
 }
 
 input,
-select {
+select,
+textarea {
   display: block;
 }
 
@@ -116,7 +119,8 @@ label {
 }
 
 input:not([type="radio"]):not([type="checkbox"]),
-select {
+select,
+textarea {
   width: 300px;
 }
 
