--- a/src/pages/HomePage/components/Banner/style.css
+++ b/src/pages/HomePage/components/Banner/style.css
@@ -1,6 +1,5 @@
 .banner {
   margin-top: 0;
-  position: relative;
 }
 
 .banner__title {
@@ -36,8 +35,12 @@
     gap: 6rem;
   }
 
+  .banner__title,
+  .banner__photo {
+    width: 50%;
+  }
+
   .banner__title {
-    width: 50vw;
     flex-direction: column;
     text-align: center;
     gap: 2rem;
@@ -45,8 +48,8 @@
 
   .banner__logo {
     margin: 0 auto;
-    width: 30vw;
-    height: 30vh;
+    width: 60%;
+    height: 40%;
     background-image: url(./img/banner-logo.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -54,7 +57,6 @@
   }
 
   .banner__photo {
-    width: 50vw;
     height: 70vh;
     border-radius: 80px 0 0 0;
   }
