--- a/src/pages/HomePage/components/Steps/Step/style.css
+++ b/src/pages/HomePage/components/Steps/Step/style.css
@@ -27,6 +27,21 @@
   background-color: #EBE2CA;
 }
 
+@media (min-width: 850px) {
+  .step {
+    width: 200px;
+    height: 200px
+  }
+}
+
+
+@media (min-width: 950px) {
+  .step {
+    width: 220px;
+    height: 220px
+  }
+}
+
 @media (min-width: 1100px) {
   .step {
     width: 230px;
